<resources>
    <string name="app_name">swoosh</string>
    <string name="Homepage_Dominate_text"><![CDATA[Find a team in your city & dominate the League]]></string>
    <string name="Homepage_Going_all_out">ON GOING ALL OUT</string>
    <string name="Homepage_Going_All_in">GO ALL IN</string>
    <string name="Homepage_get_started">GET STARTED</string>
    <string name="League_desired_league">Desired League:</string>
    <string name="League_mens">Mens</string>
    <string name="League_womens">Womens</string>
    <string name="League_co_ed">Co-Ed</string>
    <string name="League_next">NEXT</string>
    <string name="background_image">Background image</string>
    <string name="swoosh_logo">Swoosh Logo</string>
    <string name="i_am_a">I am a:</string>
    <string name="skill_activity_baller">Baller</string>
    <string name="skill_activity_beginner">Beginner</string>
</resources>
